output.txt

> ag-client-typescript@0.0.0 test /home/jameslp/autograder/typescript-client
> tsc -p . && jest

Traceback (most recent call last):
  File "manage.py", line 16, in <module>
    execute_from_command_line(sys.argv)
  File "/usr/local/lib/python3.6/site-packages/django/core/management/__init__.py", line 371, in execute_from_command_line
    utility.execute()
  File "/usr/local/lib/python3.6/site-packages/django/core/management/__init__.py", line 365, in execute
    self.fetch_command(subcommand).run_from_argv(self.argv)
  File "/usr/local/lib/python3.6/site-packages/django/core/management/base.py", line 288, in run_from_argv
    self.execute(*args, **cmd_options)
  File "/usr/local/lib/python3.6/site-packages/django/core/management/base.py", line 335, in execute
    output = self.handle(*args, **options)
  File "/usr/local/lib/python3.6/site-packages/django/core/management/commands/shell.py", line 86, in handle
    exec(options['command'])
  File "<string>", line 2
    from django.contrib.auth.models import User
    ^
IndentationError: unexpected indent
FAIL tests/test_user.ts
  ● get current user

    expect(received).toBe(expected) // Object.is equality

    Expected: true
    Received: false

      31 |     expect(current_user.last_name).toBe('');
      32 |     expect(current_user.email).toBe('');
    > 33 |     expect(current_user.is_superuser).toBe(true);
         |                                       ^
      34 | });
      35 | 
      36 | test('get user by pk', async () => {

      at Object.<anonymous> (tests/test_user.ts:33:39)
      at step (tests/test_user.ts:73:23)
      at Object.next (tests/test_user.ts:40:20)
      at fulfilled (tests/test_user.ts:7:32)

  ● get user by pk

    Failed: undefined

      35 | 
      36 | test('get user by pk', async () => {
    > 37 |     fail();
         |     ^
      38 | });
      39 | 
      40 | test('refresh user', async () => {

      at Env.fail (node_modules/jest-jasmine2/build/jasmine/Env.js:540:34)
      at Object.<anonymous> (tests/test_user.ts:37:5)
      at step (tests/test_user.ts:73:23)
      at Object.next (tests/test_user.ts:40:20)
      at tests/test_user.ts:24:71
      at Object.<anonymous>.__awaiter (tests/test_user.ts:4:12)
      at Object.<anonymous> (tests/test_user.ts:36:24)

  ● refresh user

    Failed: undefined

      39 | 
      40 | test('refresh user', async () => {
    > 41 |     fail();
         |     ^
      42 | });
      43 | 
      44 | test.skip('get courses is admin for', async () => {

      at Env.fail (node_modules/jest-jasmine2/build/jasmine/Env.js:540:34)
      at Object.<anonymous> (tests/test_user.ts:41:5)
      at step (tests/test_user.ts:73:23)
      at Object.next (tests/test_user.ts:40:20)
      at tests/test_user.ts:24:71
      at Object.<anonymous>.__awaiter (tests/test_user.ts:4:12)
      at Object.<anonymous> (tests/test_user.ts:40:22)

Test Suites: 1 failed, 1 skipped, 1 of 2 total
Tests:       3 failed, 8 skipped, 11 total
Snapshots:   0 total
Time:        2.08s, estimated 3s
Ran all test suites.
npm ERR! Test failed.  See above for more details.
